--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,8 @@ jobs:
     - run: make pdf
     - uses: actions/upload-artifact@master
       with:
-        name: kartana.pdf
-        path: kartana.pdf
+        name: cookbook.pdf
+        path: cookbook.pdf
 
   release:
     runs-on: ubuntu-latest
@@ -30,26 +30,9 @@ jobs:
     steps:
     - uses: actions/download-artifact@master
       with:
-        name: kartana.pdf
-        path: kartana.pdf
+        name: cookbook.pdf
+        path: cookbook.pdf
     - uses: ncipollo/release-action@v1
       name: Upload PDF File to GitHub
       with:
-        artifacts: kartana.pdf
-
-  publish:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - uses: actions/download-artifact@master
-      with:
-        name: kartana.pdf
-        path: kartana.pdf
-    - name: Push using Butler
-      uses: Ayowel/butler-to-itch@v1.0.0
-      with:
-        butler_key: ${{ secrets.BUTLER_CREDENTIALS }}
-        itch_user: davemenninger
-        itch_game: kartana
-        version: ${{ github.ref_name }}
-        files: "doc kartana.pdf"
+        artifacts: cookbook.pdf
