--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,8 @@ jobs:
     - run: make pdf
     - uses: actions/upload-artifact@master
       with:
-        name: menninger_cookbook.pdf
-        path: menninger_cookbook.pdf
+        name: cookbook.pdf
+        path: cookbook.pdf
 
   release:
     runs-on: ubuntu-latest
@@ -30,9 +30,9 @@ jobs:
     steps:
     - uses: actions/download-artifact@master
       with:
-        name: menninger_cookbook.pdf
-        path: menninger_cookbook.pdf
+        name: cookbook.pdf
+        path: cookbook.pdf
     - uses: ncipollo/release-action@v1
       name: Upload PDF File to GitHub
       with:
-        artifacts: menninger_cookbook.pdf
+        artifacts: cookbook.pdf
