--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install texlive-xetex
         fc-list
+    - name: Install Dependencies
+      run: make deps
     - uses: pandoc/actions/setup@v1
       with:
         version: 2.19
